*Chat alignment improvements:* 1. After sending chat message (and “Secure & Private”) it should appear just above the textentry box at the bottom of the chat window, like slack 2. Move ‘attachments’ and ‘emojis’ icons left (~5px from edge of textedit box). The lock and paperclip should be aligned (e.g. dotted line) 3. Icons should be a little larger - right now they are 20x20 and they should be 24x24. (paperclip icon was updated in veyron-design to fix size) 4. “Messages” title has more left padding than “Mailboxes” title, they should be the same. 5. New button should move ~5px right. Similar to compose, buttons should be closer to panel edge than text to compensate for the extra padding in the element. 6. Can we remove the time? it takes up a lot of room when it is aligned (Message time should be moved left to line up with mailbox dropdown arrows in the left panel). We should try and use the same unread style from mailboxes. 7. messages senders and folders should be aligned. move folders right about 3px to match messages.

--- a/app/internal_packages/edison-beijing-chat/styles/ConversationItem.less
+++ b/app/internal_packages/edison-beijing-chat/styles/ConversationItem.less
@@ -67,10 +67,14 @@
     flex-direction: column;
     justify-content: space-between;
     justify-content: center;
+    .unread-count,
     .time {
-      font-size: 12px;
-      color: #666;
+      font-size: 11px;
+      color: @gray-light;
       white-space: nowrap;
+    }
+    .unread-count {
+      font-weight: 600;
     }
   }
 
