--- a/app/internal_packages/edison-beijing-chat/styles/MessagesSendBar.less
+++ b/app/internal_packages/edison-beijing-chat/styles/MessagesSendBar.less
@@ -66,7 +66,7 @@
     position: absolute;
     top: 0;
     left: 0;
-    padding-left: 34px;
+    padding-left: 27px;
     width: 100%;
     display: flex;
     align-items: flex-end;
