--- a/app/internal_packages/edison-beijing-chat/styles/TopBar.less
+++ b/app/internal_packages/edison-beijing-chat/styles/TopBar.less
@@ -19,7 +19,7 @@
   }
 
   .left-title {
-    padding-left: 24px;
+    padding-left: 19px;
   }
 
   .center {
@@ -53,7 +53,7 @@
     text-align: center;
     font-size: 13px;
     font-weight: bold;
-    margin-right: 18px;
+    margin-right: 13px;
     box-shadow: 0 2px 7px 0 rgba(0,0,0,0.1);
     transition: 0.5s;
     img.content-mask {
