--- a/app/static/components/outline-view.less
+++ b/app/static/components/outline-view.less
@@ -109,7 +109,7 @@
     }
     .name {
       order: 2;
-      padding-left: @padding-small-horizontal * 0.85;
+      padding-left: 14px;
       overflow: hidden;
       text-overflow: ellipsis;
       color: #000;
